# vidcp

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/smoke-test/: SKILL.md
.github/workflows/: ci.yml
docs/: roadmap.md
docs/superpowers/plans/: 2026-07-12-mcp-server.md  2026-07-16-url-ingest.md
docs/superpowers/specs/: 2026-07-12-mcp-server-design.md  2026-07-16-url-ingest-design.md
src/vidcp/: __init__.py  __main__.py  cli.py  clips.py  config.py  db.py  download.py  embedding.py  errors.py  library.py  mcp_server.py  models.py  search.py  store.py  util.py
src/vidcp/export/: __init__.py  json.py  markdown.py  srt.py  vtt.py
src/vidcp/pipeline/: __init__.py  base.py  runner.py
src/vidcp/pipeline/stages/: __init__.py  audio.py  embed.py  embed_frames.py  keyframes.py  ocr.py  probe.py  scenes.py  transcribe.py
tests/: conftest.py  constants.py  test_audit_fixes.py  test_cli.py  test_clips.py  test_config.py  test_db.py  test_download.py  test_embed_frames.py  test_errors.py  test_export.py  test_export_full.py  test_ingest.py  test_mcp_server.py  test_models.py  test_ocr.py  test_pipeline.py  test_portability.py  test_runner.py  test_scenes.py  test_search.py  test_store.py  test_sync.py  test_transcribe.py  test_util.py  test_visual_cli.py  test_visual_search_e2e.py
tests/fixtures/: generate.py
